--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 			</div>
 		</div>
 	</header>
-
 	<main class="main">
 		<div class="block-1">
 			<div class="container">
@@ -54,7 +53,7 @@
 			<div class="container">
 				<div class="block-2__wrap">
 					<div class="block-2__image">
-						<img src="/img/cactus's.png" alt="Cactus's">
+						<img src="img/cactus's.png" alt="Cactus's">
 					</div>
 					<div class="block-2__right-box">
 						<div class="block-2__title">
