--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 					</div>
 					<div class="block-5__visibility-wrap">
 						<div class="block-5__visibility">
-							Visibilite. С блоком нельзя <a class="opacity__link" href="">взаимодействовать</a>,
+							Visibility. С блоком нельзя <a class="opacity__link" href="">взаимодействовать</a>,
 							но он занимает своё место в разметке.
 						</div>
 					</div>
